<resources>
    <string name="app_name">ShopInterio</string>
    <string name="action_sign_in_short">Register</string>
    <string name="create_pdf">Create PDF</string>
    <string name="enter_text">Client Name</string>
    <string name="contact">Contact</string>
    <string name="emailEnter">Email</string>
    <string name="subject">Subject</string>
    <string name="Tax_option">Select Tax</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBF4eXe59mhyEUvTxcE8TD5L9zznQFI3eA</string>

    <string-array name="Tax">
        <item>Select Tax</item>
        <item>18%</item>
        <item>28%</item>

    </string-array>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_import">Import</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_share_location">ShareLocation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_catalogue">Catalogue</string>
    <string name="title_activity_meeting_reminders">MeetingReminders</string>
    <string name="title_activity_send_quotation">SendQuotation</string>
    <string name="title_activity_locations_report">LocationsReport</string>
    <string name="title_activity_visiting_cards">VisitingCards</string>
    <string name="title_activity_meeting_details">MeetingDetails</string>
    <string name="title_activity_work_report">WorkReport</string>
    <string name="sucessfully_login">Sucessfully login</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="punch">Punch</string>
    <string name="title_activity_gps_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_lcation" />
    <string name="title_activity_user_profile">UserProfileActivity</string>
</resources>
