<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.SendQuotation">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:layout_marginBottom="20dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"

            android:layout_height="40dp"
            android:layout_alignStart="@+id/button"
            android:hint="@string/enter_text" />


        <EditText
            android:id="@+id/contact"

            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:hint="@string/contact"
            android:layout_below="@+id/client_name"
            android:layout_alignStart="@+id/client_name" />

        <EditText
            android:id="@+id/email"

            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:hint="@string/emailEnter"
            android:layout_below="@+id/contact"
            android:layout_alignStart="@+id/contact" />

        <EditText
            android:id="@+id/subject"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:hint="@string/subject"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/taxSelect"

            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:entries="@array/Tax"
            android:prompt="@string/Tax_option"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>




            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <EditText
                    android:id="@+id/description"
                    android:hint="Item Description"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp" />

                <EditText
                    android:id="@+id/thk"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:hint="Thickness"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:id="@+id/color"
                    android:hint="Color"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:id="@+id/qty"
                    android:hint="Quantity per sqft"
                    android:inputType="number"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:id="@+id/rate"
                    android:hint="Rate per sqft"
                    android:inputType="number"/>




            </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.00">


            <Button
                android:id="@+id/buttonCreatePdf"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/addData"

                android:text="@string/create_pdf" />

            <Button
                android:id="@+id/addData"
                android:layout_width="150dp"
                android:background="@color/colorAccent"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginTop="40dp"
                android:text="Add Item" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/addData"
                android:text="Press add button to add the items in quotation" />


        </RelativeLayout>

    </LinearLayout>

    </ScrollView>
</FrameLayout>
